2005-09-19  Sam Steingold  <sds@gnu.org>

	* modules/bindings/win32/win32.lisp (GetProcessVersion)
	(GetThreadPriority, GetThreadPriorityBoost, GetProcessPriorityBoost)
	(with-handle): added

2005-09-19  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c (MAKE-SOCKADDR): do not make
	unwarranted assumptions about struct sockaddr structure
	(SENDTO): pass size to sendto()

2005-09-17  Sam Steingold  <sds@gnu.org>

	* utils/modprep.lisp (print-tables-1): do not use NOTREACHED,
	issue a TYPE-ERROR instead

2005-09-16  Sam Steingold  <sds@gnu.org>

	removed the implicit assumption that struct sockaddr consists
	of 2 slots sa_family and sa_data with no padding - fixes BSD
	* modules/rawsock/rawsock.c (my_check_argument): use GETTEXT
	(SOCKADDR-FAMILY-SIZE): removed
	(SOCKADDR-SLOT): new function, replaces SOCKADDR-FAMILY-SIZE;
	not exported
	* modules/rawsock/sock.lisp (sockaddr-data): use SOCKADDR-SLOT;
	use EXPORTING:DEFUN, export SOCKADDR-P and MSGHDR-P

2005-09-16  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (check_ut_type):
	added RUN-LVL and ACCOUNTING

2005-09-16  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/configure.in (XGetAtomNames): fixed the test
	use CL_FIND_X instead of AC_PATH_XTRA
	* modules/clx/new-clx/link.sh, modules/clx/new-clx/Makefile.in:
	updated for to use CL_FIND_X instead of AC_PATH_XTRA

2005-09-15  Sam Steingold  <sds@gnu.org>

	* lispbibl.d: use puts() instead of printf() when possible
	(MAKE_CHECK_LOW, MAKE_CHECK, MAKE_CHECK_): new macros
	(with_string_0_help_, with_sstring_0_help_): take both "A" for
	cstombs_help_() and "NR" for unpack_sstring_alloca_help_()
	* genclisph.d (export_literal): added

2005-09-15  Sam Steingold  <sds@gnu.org>

	* modules/bindings/win32/win32.lisp (GetCurrentThreadId): added
	* modules/bindings/win32/test.tst: new file

2005-09-15  Sam Steingold  <sds@gnu.org>

	* configure: document --enable-maintainer-mode
	* makemake.in: handle --enable-maintainer-mode