@@ -1,3 +1,8 @@
+2005-09-20  Sam Steingold  <sds@gnu.org>
+
+	* modules/syscalls/posix.lisp: do (ext:re-export "POSIX" "EXT") at
+	the end of the file to re-export all POSIX symbols
+
 2005-09-19  Sam Steingold  <sds@gnu.org>
 
 	* modules/bindings/win32/win32.lisp (GetProcessVersion)
